# sparse-FFT

./: .gitignore  CMakeLists.txt  README.md
include/: common.h
source/: accelerate.cpp  baseline.cpp  common.cpp  main.cpp
